# xfce4-cpugraph-plugin

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  meson.build  module.xml
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  Makefile.in  actions.c  actions.h  cpu.c  cpu.cc  cpu.h  cpu_os.c  cpu_os.h  cpugraph.desktop.in  cpugraph.desktop.in.in  meson.build  mode.c  mode.cc  mode.h  option.c  option.h  os.c  os.cc  os.h  plugin.c  plugin.h  properties.c  properties.cc  properties.h  settings.c  settings.cc  settings.h
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  ku.po  lo.po  lt.po  lv.po  ms.po  (+26 more)
xfce4++/: Makefile.am  connections.hh  dummy.cc  fuzzy-cmp.hh  io.hh  rc.hh  rgba.hh  util.h
xfce4++/util/: Makefile.am  collection-utils.h  fixes.h  gtk.cc  gtk.h  io.cc  io.h  memory.cc  memory.h  optional.h  rc.cc  rc.h  string-utils.cc  string-utils.h  string.cc  string.h
xfce4cpp/: rgba.hh  string-utils.hh  timer.hh
